[package]
name = "prometheus_tcp_exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
prometheus = "0.13"
warp = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
prometheus = "0.13"
reqwest = "0.11"

